--- a/src/tables/tblHatcheryRecords/styles/tblHatcheryRecords.css
+++ b/src/tables/tblHatcheryRecords/styles/tblHatcheryRecords.css
@@ -82,21 +82,21 @@
   
 
   .action-button.edit {
-    background-color: #047857; /* Darker green for edit */
+    background-color: #047857; 
   }
   
   .action-button.edit:hover {
-    background-color: #E9F3E2; /* Slightly lighter green for hover */
+    background-color: #E9F3E2; 
     color: #024533;
 
   }
   
   .action-button.view {
-    background-color: #4f9b5b; /* Standard green for view */
+    background-color: #4f9b5b;
   }
   
   .action-button.view:hover {
-    background-color: #E9F3E2; /* Lighter green for hover */
+    background-color: #E9F3E2;
     color: #024533;
 
   }
@@ -400,24 +400,22 @@
   }
   
 .read-only-field {
-  background-color: #f1f1f1 !important; /* Light gray background for display */
-  color: #6c757d !important; /* Gray text color */
-  border: 1px solid #ced4da !important; /* Light gray border */
-  padding: 0.375rem 0.75rem; /* Padding for consistent spacing */
-  pointer-events: none; /* Disable all mouse events */
-  box-shadow: none; /* Remove shadow for display look */
+  background-color: #f1f1f1 !important;
+  color: #6c757d !important; 
+  border: 1px solid #ced4da !important; 
+  padding: 0.375rem 0.75rem; 
+  pointer-events: none; 
+  box-shadow: none; 
 }
 
-/* Styling for invalid input fields */
 .is-invalid {
-  border-color: #dc3545; /* Red border for error state */
-  background-color: #f8d7da; /* Light red background for error state */
+  border-color: #dc3545; 
+  background-color: #f8d7da; 
 }
 
-/* Invalid feedback styling */
 .invalid-feedback {
-  color: #dc3545; /* Red color for error messages */
-  font-size: 0.875em; /* Slightly smaller font size */
+  color: #dc3545; 
+  font-size: 0.875em; 
 }
 
   
@@ -469,7 +467,6 @@
 
   }
   
-  /* styles/tblUserRecords.css */
   
   .table-container {
     position: relative;
@@ -481,14 +478,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background:rgba(32, 32, 32, 0.5); /* Optional: for a semi-transparent overlay */
-    filter: blur(1px); /* Adjust the blur intensity as needed */
-    z-index: 1000; /* Ensure it's behind the modal */
-    pointer-events: none; /* Allow clicks through the blur layer */
+    background:rgba(32, 32, 32, 0.5); 
+    filter: blur(1px); 
+    z-index: 1000; 
+    pointer-events: none; 
   }
   
   .modal-open .table-container {
-    overflow: hidden; /* Prevent scrolling of the background content */
+    overflow: hidden; 
   }
   
   
@@ -498,14 +495,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background:  rgba(32, 32, 32, 0.5); /* Optional: semi-transparent overlay */
-    filter: blur(300%); /* Adjust the blur intensity */
-    z-index: 10; /* Ensure it's behind the modal */
-    pointer-events: none; /* Allow clicks through the blur layer */
+    background:  rgba(32, 32, 32, 0.5); 
+    filter: blur(300%); 
+    z-index: 10; 
+    pointer-events: none; 
   }
   
   .modal-open .container {
-    overflow: hidden; /* Prevent scrolling of the background content */
+    overflow: hidden; 
   }
 
   .success-message {
@@ -518,7 +515,7 @@
     color: #155724;
     border: 1px solid #c3e6cb;
     border-radius: 5px;
-    z-index: 1050; /* Ensure it's above other content */
+    z-index: 1050; 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     font-size: 16px;
     font-weight: 500;
@@ -535,13 +532,11 @@
   transition: background-color 0.2s, border-color 0.2s;
 }
 
-/* Hover and active states for checkboxes */
 .table-container input[type="checkbox"]:hover {
-  background-color: #f0f0f0; /* Light background on hover */
+  background-color: #f0f0f0; 
   
 }
 
-/* Ensure the checkbox maintains visibility when checked */
 .table-container input[type="checkbox"]:checked::after {
   color: white;
   font-size: 14px;
@@ -556,11 +551,15 @@
   
 }
 
-/* Adjust the styling for checkbox focus state */
 .table-container input[type="checkbox"]:focus {
   outline-offset: 2px;
 }
 
+.form-control:focus {
+  border-color: rgba(2, 69, 51, 0.2) !important; 
+  box-shadow: 0 0 0 0.2rem rgba(2, 69, 51, 0.2) !important; 
+  outline: none;
+}
 
   @media (max-width: 1000px) {
   
