--- a/src/tables/tblUserRecords/styles/tblUserRecords.css
+++ b/src/tables/tblUserRecords/styles/tblUserRecords.css
@@ -81,21 +81,21 @@
   
 
   .action-button.edit {
-    background-color: #047857; /* Darker green for edit */
+    background-color: #047857; 
   }
   
   .action-button.edit:hover {
-    background-color: #E9F3E2; /* Slightly lighter green for hover */
+    background-color: #E9F3E2; 
     color: #024533;
 
   }
   
   .action-button.view {
-    background-color: #4f9b5b; /* Standard green for view */
+    background-color: #4f9b5b; 
   }
   
   .action-button.view:hover {
-    background-color: #E9F3E2; /* Lighter green for hover */
+    background-color: #E9F3E2; 
     color: #024533;
 
   }
@@ -399,6 +399,12 @@
     margin-bottom: 1rem; 
     
   }
+
+  .form-control:focus {
+    border-color: rgba(2, 69, 51, 0.2) !important; 
+    box-shadow: 0 0 0 0.2rem rgba(2, 69, 51, 0.2) !important; 
+    outline: none; 
+  }
   
   .modal-footer .btn-primary{
     background-color: #024533;
@@ -447,9 +453,7 @@
     font-size: smaller;
 
   }
-  
-  /* styles/tblUserRecords.css */
-  
+    
   .table-container {
     position: relative;
   }
@@ -460,14 +464,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background:rgba(32, 32, 32, 0.5); /* Optional: for a semi-transparent overlay */
-    filter: blur(1px); /* Adjust the blur intensity as needed */
-    z-index: 1000; /* Ensure it's behind the modal */
-    pointer-events: none; /* Allow clicks through the blur layer */
+    background:rgba(32, 32, 32, 0.5);
+    filter: blur(1px); 
+    z-index: 1000; 
+    pointer-events: none;
   }
   
   .modal-open .table-container {
-    overflow: hidden; /* Prevent scrolling of the background content */
+    overflow: hidden; 
   }
   
   
@@ -477,14 +481,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background:  rgba(32, 32, 32, 0.5); /* Optional: semi-transparent overlay */
-    filter: blur(300%); /* Adjust the blur intensity */
-    z-index: 10; /* Ensure it's behind the modal */
-    pointer-events: none; /* Allow clicks through the blur layer */
+    background:  rgba(32, 32, 32, 0.5); 
+    filter: blur(300%); 
+    z-index: 10; 
+    pointer-events: none; 
   }
   
   .modal-open .container {
-    overflow: hidden; /* Prevent scrolling of the background content */
+    overflow: hidden; 
   }
 
   .success-message {
@@ -497,7 +501,7 @@
     color: #155724;
     border: 1px solid #c3e6cb;
     border-radius: 5px;
-    z-index: 1050; /* Ensure it's above other content */
+    z-index: 1050; 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     font-size: 16px;
     font-weight: 500;
@@ -516,13 +520,11 @@
   transition: background-color 0.2s, border-color 0.2s;
 }
 
-/* Hover and active states for checkboxes */
 .table-container input[type="checkbox"]:hover {
-  background-color: #f0f0f0; /* Light background on hover */
+  background-color: #f0f0f0; 
   
 }
 
-/* Ensure the checkbox maintains visibility when checked */
 .table-container input[type="checkbox"]:checked::after {
   color: white;
   font-size: 14px;
@@ -537,14 +539,11 @@
   
 }
 
-/* Adjust the styling for checkbox focus state */
 .table-container input[type="checkbox"]:focus {
   outline-offset: 2px;
 }
 
   
-
-
   @media (max-width: 1000px) {
   
     .App{
