--- a/src/tables/tblHatcheryRecords/styles/tblHatcheryRecords.css
+++ b/src/tables/tblHatcheryRecords/styles/tblHatcheryRecords.css
@@ -15,8 +15,8 @@
   .table-responsive {
     table-layout: auto;
     border-collapse: collapse;
-    box-shadow: 0px 10px 10px #cccccc9d;
-    border-radius: 25px;
+    box-shadow:  0px 10px 10px #e4e4e4;
+    border-radius: 15px;
     background-color: white;
     white-space: nowrap;
     margin: auto;
@@ -27,28 +27,47 @@
     overflow-y: hidden;
     font-size: small;
     align-items: center;
+    
 
   }
+
+
+  /* Table row styling */
+.table-responsive tr {
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+.table-responsive tr:hover {
+  background-color: #f0f0f0; /* Change this to your preferred hover color */
+  transform: scale(1.01); /* Slightly enlarge the row on hover */
+  
+}
+
+/* Optional: Adds a subtle shadow to the row on hover for better visual depth */
+.table-responsive tr:hover {
+  box-shadow: 0px 5px 10px rgba(56, 56, 56, 0.244);
+}
   
   .table thead th {
-    background-color: #E9F3E2; 
+    background-color: #E9F3E2 !important; 
     font-weight: bold; 
     height: 80px;
     align-content: center;
-    font-size: medium;
-
-    
+    font-size: medium;     
   }
   
+
+
   .table-no-border th,
   .table-no-border td {
     border: none !important; 
-    color: #282828 !important; 
-
+    color: #282828 !important;     
   }
   
+
   .table-no-border {
     border-collapse: collapse;
+    overflow: hidden;
     
   }
   
