--- a/src/tables/tblHatcheryRecords/styles/tblHatcheryRecords.css
+++ b/src/tables/tblHatcheryRecords/styles/tblHatcheryRecords.css
@@ -119,6 +119,18 @@
     color: #024533;
 
   }
+
+  
+.action-button.map {
+  background-color: #00B272;
+}
+
+.action-button.map:hover {
+  background-color: #E9F3E2;
+  color: #024533;
+
+}
+
   
   .row-btn{
     padding-top: 5%;
@@ -543,36 +555,45 @@
   }
 
 
+
 .table-container input[type="checkbox"] {
-  margin-left: 15px;
+  background-color: #fff;
   width: 15px;
   height: 15px;
   cursor: pointer;
-  transition: background-color 0.2s, border-color 0.2s;
+  box-shadow: none;
+  transition: background-color 0.2s, border-color 0.2s, box-shadow 0.2s;
+}
+
+.table-container input[type="checkbox"]:checked {
+  background-color: #024533 !important;
+  border-color: #024533 !important;
+  box-shadow: 0 0 0 0.2rem rgba(0, 100, 50, 0.25) !important;
+}
+
+.table-container input[type="checkbox"]:checked:hover,
+.table-container input[type="checkbox"]:checked:active,
+.table-container input[type="checkbox"]:checked:focus {
+  background-color: #024533 !important;
+  border-color: #024533 !important;
+  box-shadow: 0 0 0 0.2rem rgba(0, 100, 50, 0.25) !important;
+}
+
+.table-container input[type="checkbox"]:active {
+  box-shadow: 0 0 0 0.4rem rgba(0, 100, 50, 0.35) !important;
+  border-color: #024533 !important;
+  border-style: none;
+}
+
+.table-container input[type="checkbox"]:not(:checked):focus {
+  border-color: #2828281e;
+  box-shadow: none;
 }
 
 .table-container input[type="checkbox"]:hover {
-  background-color: #f0f0f0; 
-  
+  background-color: #f0f0f0;
 }
 
-.table-container input[type="checkbox"]:checked::after {
-  color: white;
-  font-size: 14px;
-  line-height: 20px;
-  text-align: center;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  position: relative;
-  top: -1px;
-  left: 2px;
-  
-}
-
-.table-container input[type="checkbox"]:focus {
-  outline-offset: 2px;
-}
 
 .form-control:focus {
   border-color: rgba(2, 69, 51, 0.2) !important; 
@@ -580,88 +601,121 @@
   outline: none;
 }
 
-  @media (max-width: 1000px) {
-  
-    .App{
-      overflow-x: auto;
-    }
-  
-  
-    .table-responsive{
-      table-layout: auto;
-      width: 320px;
-        
-    
-    }
-  
-    .table-no-border th,
-    .table-no-border td {
-      font-size: 10px;
-    }
-  
-    .action-icon {
-      font-size: 10px;
-    }
-  
-    .titleList {
-      font-size: 15px;
-    }
-  
-    .totalRec {
-      font-size: 10px;
-    }
-  
-    .btn-group {
-      flex-direction: column;
-  
-    }
-  
-    .btn-group .btn {
-      margin: 5px 0;
-      font-size: 10px;
-    }
-  
-    .search {
-      flex-direction: column;
-  
-    }
-  
-    .custom-search {
-      height: 50px;
-      font-size: 5px;
-  
-    }
-  
-  
-    .search-button {
-      width: 100%;
-      margin-top: 15px;
-      height: 20px; 
-      font-size: 10px; 
-      margin-right: 3%;
-    }
-  
-    .search-icon {
-      font-size: 10px; 
-      
-    }
-  
-    .pagination-container {
-      width: 350px;
-      padding-right: 0;
-      justify-content: center;
-    }
-  
-    .pagination-container .MuiTablePagination-actions .MuiIconButton-root {
-      font-size: 0.5rem; 
-    }
-  
-    .pagination-container .MuiTablePagination-actions .MuiIconButton-root svg {
-      font-size: 0.5rem; 
-    }
-  
-    .pagination-container .MuiTablePagination-select,
-    .pagination-container .MuiTablePagination-displayedRows {
-      font-size: 0.5rem; 
+@media (max-width: 1200px) and (max-height: 800px) {
+
+  .App {
+    overflow-x: auto;
   }
+
+
+  .action-icon {
+    font-size: 10px;
   }
+
+  .titleList {
+    font-size: 15px;
+
+  }
+
+  .totalRec {
+    font-size: 10px;
+    margin-right: 20%;
+  }
+
+
+
+  .btn-group .btn {
+    margin: 5px 0;
+    font-size: 10px;
+  }
+
+ 
+
+  .custom-search {
+    font-size: 5px;
+    width: 100px !important;
+    display: block;
+
+  }
+
+
+  .search-icon {
+    font-size: 10px;
+
+  }
+
+  .pagination-container {
+    width: 350px;
+    padding-right: 0;
+    justify-content: center;
+  }
+
+  .pagination-container .MuiTablePagination-actions .MuiIconButton-root {
+    font-size: 0.5rem;
+  }
+
+  .pagination-container .MuiTablePagination-actions .MuiIconButton-root svg {
+    font-size: 0.5rem;
+  }
+
+  .pagination-container .MuiTablePagination-select,
+  .pagination-container .MuiTablePagination-displayedRows {
+    font-size: 0.5rem;
+  }
+
+  .btn-group .cancel {
+    margin-left: 5%;
+
+  }
+
+  .form-control::placeholder {
+    font-size: smaller;
+  }
+
+  .form-control {
+    font-size: smaller !important;
+  }
+
+  .dropdown-menu {
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 100vh; 
+    width: 100%; 
+  }
+  
+  .dropdown-menu.show {
+    width: 250%; 
+    height: auto; 
+    max-height: 100vh; 
+    overflow-y: auto;
+    overflow-x: hidden; 
+  }
+
+  
+.row-btn {
+  position: relative;
+font-size: smaller;
+flex-direction: column;
+display: block;
+
+}
+  
+
+}
+
+@media (max-width: 300px) {
+
+
+
+  .table-responsive {
+    table-layout: auto;
+    width: 100% !important;
+    max-width: 200% !important;
+
+  }
+
+  .table-no-border th,
+  .table-no-border td {
+    font-size: 10px;
+  }}
+
