--- a/src/tables/tblSurrenderRecords/styles/tblSurrenderRecords.css
+++ b/src/tables/tblSurrenderRecords/styles/tblSurrenderRecords.css
@@ -28,7 +28,7 @@
   font-size: small;
   align-items: center;
 
-  display: flex;
+  /* display: flex;  */
   justify-content: center;
 }
 
@@ -166,7 +166,6 @@
   display: flex;
   align-items: center;
   padding: 5px;
-  position: sticky;
   top: 0;
   z-index: 10;
   width: 100%;
