--- a/src/tables/tblHatcheryRecords/styles/tblHatcheryRecords.css
+++ b/src/tables/tblHatcheryRecords/styles/tblHatcheryRecords.css
@@ -125,13 +125,13 @@
   background-color: #00B272;
 }
 
-.action-button.map:hover {
+.action-button .map:hover {
   background-color: #E9F3E2;
   color: #024533;
 
 }
 
-  
+
   .row-btn{
     padding-top: 5%;
     margin-left: 1%;
@@ -314,6 +314,106 @@
     background-color: #024533; 
   }
   
+
+
+  .btn-group .cancel {
+    margin-left: 5%;
+  
+  }
+  
+  .btn-group .cancel,
+  .btn-group .apply {
+    font-size: 12px;
+  }
+
+  .apply-message {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 15px;
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+    border-radius: 5px;
+    z-index: 1050;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-size: 16px;
+    font-weight: 500;
+    max-width: 90%;
+    text-align: center;
+  }
+  
+  .filter-btn-grp{
+ 
+  
+    padding: 10px 15px;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+
+  }
+  
+    
+  
+  
+  .filter-btn-grp .apply {
+    background-color: #024533 !important;
+    border-color: transparent !important;
+    font-weight: 600 !important;
+    color: white !important;
+    margin-right: 10px !important;
+    padding: 5px 10px !important;
+    height: 100% !important;
+    width: 50% !important;
+
+  
+  }
+  
+  .apply:hover {
+    background-color: #E9F3E2 !important;
+    border-color: #024533 !important;
+    color: #024533 !important;
+  
+  }
+  
+  .filter-btn-grp .cancel {
+    background-color: #E9F3E2 !important;
+    border-color: #024533 !important;
+    color: #024533 !important;
+    font-weight: 600 !important;
+    margin-right: 10px !important;
+    padding: 5px 10px !important;
+    height: 100% !important;
+    width: 50% !important;
+
+  }
+  
+  .cancel:hover {
+    background-color: #024533 !important;
+    color: white !important;
+  }
+  
+  
+  .apply:active {
+    background-color: #024533 !important;
+    border-color: transparent;
+    font-weight: 600;
+    border-color: #024533 !important;
+    color: white !important;
+  
+  }
+  
+  .cancel:active {
+    background-color: #E9F3E2 !important;
+    border-color: transparent;
+    font-weight: 600;
+    color: #024533 !important;
+  }
+  
+
   
   .dropdown-menu .dropdown-item:hover {
     background-color: #666666;
@@ -429,6 +529,60 @@
     margin-bottom: 1rem; 
     
   }
+
+  .form-check-input {
+    background-color: #fff;
+    border: #024533;
+    box-shadow: none;
+    cursor: pointer;
+  }
+  
+  .form-check-input:checked {
+    background-color: #024533 !important;
+    border-color: #024533 !important;
+    box-shadow: 0 0 0 0.2rem rgba(0, 100, 50, 0.25) !important;
+  }
+  
+  .form-check-input:checked:hover,
+  .form-check-input:checked:active,
+  .form-check-input:checked:focus {
+    background-color: #024533 !important;
+    border-color: #024533 !important;
+    box-shadow: 0 0 0 0.2rem rgba(0, 100, 50, 0.25) !important;
+  }
+  
+  .form-check-input:active {
+    box-shadow: 0 0 0 0.4rem rgba(0, 100, 50, 0.35) !important;
+    border-color: #024533 !important;
+    border-style: none;
+  }
+  
+  .form-check-input:not(:checked):focus {
+    border-color: #2828281e;
+    box-shadow: none;
+  }
+  
+  .form-check-input:checked {
+    color: #024533;
+  }
+  
+  
+  .form-check-label {
+    font-size: 12px !important;
+  
+  }
+  
+  .form-check-input .source{
+    font-weight: 900 !important;
+  }
+
+
+  .form-check-label-source{
+    font-size: 12px !important;
+    font-weight: 500 !important;
+
+  }
+
   
 .read-only-field {
   background-color: #f1f1f1 !important;
@@ -497,6 +651,7 @@
     font-size: smaller;
 
   }
+  
   
   
   .table-container {
@@ -600,6 +755,55 @@
   box-shadow: 0 0 0 0.2rem rgba(2, 69, 51, 0.2) !important; 
   outline: none;
 }
+
+.dropdown .dropdown-item {
+  color: #282828;
+
+}
+
+.dropdown .dropdown-item:active {
+  background-color: transparent;
+  color: inherit;
+  outline: none;
+  box-shadow: none;
+}
+
+
+.dropdown .dropdown-item:hover {
+  background-color: transparent;
+  color: #282828;
+  outline: none;
+  box-shadow: none;
+}
+
+
+.dropdown-item .form-control {
+  font-size: 12px !important;
+
+}
+
+.dropdown-open {
+  pointer-events: none;
+}
+
+.dropdown-open .dropdown-menu,
+.dropdown-open .btn-filter {
+  pointer-events: all;
+}
+
+
+.dropdown-menu {
+  overflow-y: auto;
+  overflow-x: hidden;
+
+}
+
+
+.dropdown-menu.show {
+  width: 300%;
+}
+
+
 
 @media (max-width: 1200px) and (max-height: 800px) {
 
