--- a/src/tables/tblUserRecords/styles/tblUserRecords.css
+++ b/src/tables/tblUserRecords/styles/tblUserRecords.css
@@ -682,6 +682,45 @@
 
 }
 
+.filter-btn-grp{
+ 
+  
+  padding: 10px 15px;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+
+}
+
+  
+
+.filter-btn-grp .apply {
+  background-color: #024533 !important;
+  border-color: transparent !important;
+  font-weight: 600 !important;
+  color: white !important;
+  margin-right: 10px !important;
+  padding: 5px 10px !important;
+  height: 100% !important;
+  width: 50% !important;
+
+
+}
+
+.filter-btn-grp .cancel {
+  background-color: #E9F3E2 !important;
+  border-color: #024533 !important;
+  color: #024533 !important;
+  font-weight: 600 !important;
+  margin-right: 10px !important;
+  padding: 5px 10px !important;
+  height: 100% !important;
+  width: 50% !important;
+
+}
+
 .cancel {
   background-color: #E9F3E2 !important;
   border-color: #024533 !important;
@@ -714,89 +753,130 @@
   color: #024533 !important;
 }
 
+.filterTitle {
+  color: #024533;
+}
+
+.filterSubtitle {
+  color: #024533;
+}
   
-  @media (max-width: 1000px) {
-  
-    .App{
-      overflow-x: auto;
-    }
-  
-  
-    .table-responsive{
-      table-layout: auto;
-      width: 320px;
-        
-    
-    }
-  
-    .table-no-border th,
-    .table-no-border td {
-      font-size: 10px;
-    }
-  
-    .action-icon {
-      font-size: 10px;
-    }
-  
-    .titleList {
-      font-size: 15px;
-    }
-  
-    .totalRec {
-      font-size: 10px;
-    }
-  
-    .btn-group {
-      flex-direction: column;
-  
-    }
-  
-    .btn-group .btn {
-      margin: 5px 0;
-      font-size: 10px;
-    }
-  
-    .search {
-      flex-direction: column;
-  
-    }
-  
-    .custom-search {
-      height: 50px;
-      font-size: 5px;
-  
-    }
-  
-  
-    .search-button {
-      width: 100%;
-      margin-top: 15px;
-      height: 20px; 
-      font-size: 10px; 
-      margin-right: 3%;
-    }
-  
-    .search-icon {
-      font-size: 10px; 
-      
-    }
-  
-    .pagination-container {
-      width: 350px;
-      padding-right: 0;
-      justify-content: center;
-    }
-  
-    .pagination-container .MuiTablePagination-actions .MuiIconButton-root {
-      font-size: 0.5rem; 
-    }
-  
-    .pagination-container .MuiTablePagination-actions .MuiIconButton-root svg {
-      font-size: 0.5rem; 
-    }
-  
-    .pagination-container .MuiTablePagination-select,
-    .pagination-container .MuiTablePagination-displayedRows {
-      font-size: 0.5rem; 
+ 
+@media (max-width: 1200px) and (max-height: 800px) {
+
+  .App {
+    overflow-x: auto;
   }
+
+
+  .action-icon {
+    font-size: 10px;
   }
+
+  .titleList {
+    font-size: 15px;
+
+  }
+
+  .totalRec {
+    font-size: 10px;
+    margin-right: 20%;
+  }
+
+
+
+  .btn-group .btn {
+    margin: 5px 0;
+    font-size: 10px;
+  }
+
+ 
+
+  .custom-search {
+    font-size: 5px;
+    width: 100px !important;
+    display: block;
+
+  }
+
+
+  .search-icon {
+    font-size: 10px;
+
+  }
+
+  .pagination-container {
+    width: 350px;
+    padding-right: 0;
+    justify-content: center;
+  }
+
+  .pagination-container .MuiTablePagination-actions .MuiIconButton-root {
+    font-size: 0.5rem;
+  }
+
+  .pagination-container .MuiTablePagination-actions .MuiIconButton-root svg {
+    font-size: 0.5rem;
+  }
+
+  .pagination-container .MuiTablePagination-select,
+  .pagination-container .MuiTablePagination-displayedRows {
+    font-size: 0.5rem;
+  }
+
+  .btn-group .cancel {
+    margin-left: 5%;
+
+  }
+
+  .form-control::placeholder {
+    font-size: smaller;
+  }
+
+  .form-control {
+    font-size: smaller !important;
+  }
+
+  .dropdown-menu {
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 100vh; 
+    width: 100%; 
+  }
+  
+  .dropdown-menu.show {
+    width: 250%; 
+    height: auto; 
+    max-height: 100vh; 
+    overflow-y: auto;
+    overflow-x: hidden; 
+  }
+
+  
+.row-btn {
+  position: relative;
+font-size: smaller;
+flex-direction: column;
+display: block;
+
+}
+  
+
+}
+
+@media (max-width: 300px) {
+
+
+
+  .table-responsive {
+    table-layout: auto;
+    width: 100% !important;
+    max-width: 200% !important;
+
+  }
+
+  .table-no-border th,
+  .table-no-border td {
+    font-size: 10px;
+  }}
+
